--- a/src/app/components/input-home/input-home.component.html
+++ b/src/app/components/input-home/input-home.component.html
@@ -4,14 +4,28 @@
   <section class="conteudo">
     <img src="../../../assets/images/lçgo-removebg-preview.png" alt="logo_cs" width="100" height="100">
     <h1 class="titulo">CsBombs</h1>  
-    <select class="select select-warning w-full max-w-xs">
-      <option value="" disabled selected hidden>Select your option</option>
-      <option value="#">Dust2</option>
-      <option value="#">Inferno</option>
-      <option value="#">Mirage</option>
-      <option value="#">Overpass</option>
-      <option value="#">Vertigo</option>
-      <option value="#">Cache</option>
+
+    <select class="
+    select 
+    w-[60%]
+    bg-transparent
+    text-center
+    rounded
+    border-4
+    border-[var(--azul-principal)]
+    font-krona text-[12px]
+    text-[var(--laranja-principal)]
+    my-8
+    [&>*]:py-4
+    ">
+      <option value="" disabled selected hidden >Pick your map</option>
+      <option value="#" style="padding: 8px 0;">Dust2</option>
+      <option value="#" style="padding: 8px 0;">Inferno</option>
+      <option value="#" style="padding: 8px 0;">Mirage</option>
+      <option value="#" style="padding: 8px 0;">Overpass</option>
+      <option value="#" style="padding: 8px 0;">Vertigo</option>
+      <option value="#" style="padding: 8px 0;">Cache</option>
     </select>
+    <button class="btn bg-[--azul-principal] btn-neutral font-krona text-[12px] w-[200px] h-[40px] text-[20px]">Select</button>
   </section>
 </div>
