--- a/src/app/components/Principal/map-info/map-info.component.html
+++ b/src/app/components/Principal/map-info/map-info.component.html
@@ -4,7 +4,7 @@
     
     <section class="conteudo_principal">
         <div class="conteiner conteiner_inputs">
-        <h1 class="map_title">{{ par }}</h1>
+        <h1 class="map_title">{{ mapa.name }}</h1>
 
         <div class="formulario_container">
             
