--- a/src/app/components/Principal/perfil/perfil.component.css
+++ b/src/app/components/Principal/perfil/perfil.component.css
@@ -16,7 +16,21 @@
     display: flex;
     flex-direction: column;  
     align-items: center;
+    justify-content: center;
     padding: 75px;
+}
+
+.tittle2 {
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+}
+
+.container_permissoes {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
 }
 
 .botoes_permissoes {
