--- a/src/app/components/Principal/perfil/perfil.component.html
+++ b/src/app/components/Principal/perfil/perfil.component.html
@@ -4,7 +4,7 @@
     <section class="conteudo_principal">
 
         <div class="container container_img place-content-center">
-            <img src="../../../../assets/images/cursedgoat.png" alt="img_perfil" class="p-20 place-items-center" style="width: 400px; border-radius: 1000px;">
+            <img src="../../../../assets/images/cursedgoat.png" alt="img_perfil" class="p-50 place-items-center" style="width: 400px; border-radius: 1000px;">
         </div>
 
         <div class="container container_form_infos">
@@ -26,6 +26,11 @@
         </div>
     </section>
     <section class="botoes_permissoes">
-        <h2 class="tittle tutorials_titulo text-[36px]">Permissions</h2>
+        <h2 class="tittle2 tutorials_titulo text-[36px]">Permissions</h2>
+        <div class="container_permissoes w-[100%]">
+            <div class="flex bg-[#1D2C49] items-center justify-center rounded-[10px] w-[125px] h-[95px]">
+                <button class="w-[125px] h-[95px]" (click)="redirectToCreate()">New Map</button>
+            </div>
+        </div>
     </section>
 </div>
