--- a/src/app/components/admin/create-map/create-map.component.css
+++ b/src/app/components/admin/create-map/create-map.component.css
@@ -20,3 +20,18 @@
     border: 3px solid #D9D9D9;
     width: 60%;
 }
+
+.list-disc {
+    display: grid;
+    grid-template-columns: 90% 10%;
+    justify-content: center;
+    align-items: center;
+}
+
+.morte {
+    color: green;
+}
+
+.morte:hover {
+    background-color: green;
+}
