--- a/src/app/components/headers/header/header.component.html
+++ b/src/app/components/headers/header/header.component.html
@@ -5,6 +5,7 @@
     </div>
 
     <div class="container container_botoes" style="grid-column-start: 2" >
+        <a href="/perfil" class="btn btn2 bg-[--laranja-principal] btn-neutral font-krona text-[12px] w-[125px] h-[40px] text-[15px]">Login</a>
         <button class="btn btn1 bg-[--azul-principal] btn-neutral font-krona text-[12px] w-[125px] h-[40px] text-[15px]">Register</button>
         <button class="btn btn2 bg-[--laranja-principal] btn-neutral font-krona text-[12px] w-[125px] h-[40px] text-[15px] ">Login</button>
     </div>
