--- a/src/app/components/admin/create-map/create-map.component.html
+++ b/src/app/components/admin/create-map/create-map.component.html
@@ -6,11 +6,11 @@
             <p class="flex items-center justify-center p-[20px] text-[15px] text-[var(--laranja-principal)]">The heavy's and teams options are automatically registered</p>
 
             <label for="map" class="label_titulo"> Map Name
-                <input [(ngModel)]="mapa.name" id="map" type="text" [ngModelOptions]="{standalone: true}" class="h-[35px] mt-[10px] text-[var(--laranja-principal)] bg-[#D9D9D9]">
+                <input [(ngModel)]="name" id="map" type="text" [ngModelOptions]="{standalone: true}" class="h-[35px] mt-[10px] text-[var(--laranja-principal)] bg-[#D9D9D9]">
             </label>
 
             <label class="label_titulo"> Map Picture
-                <input [(ngModel)]="mapa.map_url_pic" type="file" [ngModelOptions]="{standalone: true}" class="file-input file-input-bordered file-input-info w-full mt-[10px] text-[var(--laranja-principal)] bg-[#D9D9D9] border-[var(--laranja-principal)] file:bg-[var(--laranja-principal)] file:border-[var(--laranja-principal)]">
+                <input type="file" (change)="onFileSelected($event)" class="file-input file-input-bordered file-input-info w-full mt-[10px] text-[var(--laranja-principal)] bg-[#D9D9D9] border-[var(--laranja-principal)] file:bg-[var(--laranja-principal)] file:border-[var(--laranja-principal)]">
             </label>
 
             <div class="flex">
